continued updates to news, update dockerfile

--- a/notebooks/news.ipynb
+++ b/notebooks/news.ipynb
@@ -143,9 +143,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Could not import azure.core python package.\n"
+     ]
+    },
     {
      "ename": "KeyboardInterrupt",
      "evalue": "",
@@ -153,7 +160,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[3], line 4\u001b[0m\n\u001b[1;32m      1\u001b[0m url \u001b[39m=\u001b[39m \u001b[39m\"\u001b[39m\u001b[39mhttps://www.nasdaq.com/articles/apple-denies-surveillance-claims-made-by-russias-fsb\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m      3\u001b[0m loader \u001b[39m=\u001b[39m UnstructuredURLLoader(urls\u001b[39m=\u001b[39m[url], continue_on_failure\u001b[39m=\u001b[39m\u001b[39mFalse\u001b[39;00m)\n\u001b[0;32m----> 4\u001b[0m data \u001b[39m=\u001b[39m loader\u001b[39m.\u001b[39;49mload()\n",
+      "Cell \u001b[0;32mIn[2], line 6\u001b[0m\n\u001b[1;32m      3\u001b[0m url \u001b[39m=\u001b[39m \u001b[39m\"\u001b[39m\u001b[39mhttps://www.nasdaq.com/articles/apple-denies-surveillance-claims-made-by-russias-fsb\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m      5\u001b[0m loader \u001b[39m=\u001b[39m UnstructuredURLLoader(urls\u001b[39m=\u001b[39m[url], continue_on_failure\u001b[39m=\u001b[39m\u001b[39mFalse\u001b[39;00m)\n\u001b[0;32m----> 6\u001b[0m data \u001b[39m=\u001b[39m loader\u001b[39m.\u001b[39;49mload()\n\u001b[1;32m      8\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mfound data: \u001b[39m\u001b[39m{\u001b[39;00mdata\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m)\n",
       "File \u001b[0;32m~/development/public/portfolio-analysis-app/.venv/lib/python3.10/site-packages/langchain/document_loaders/url.py:90\u001b[0m, in \u001b[0;36mUnstructuredURLLoader.load\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m     88\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m__is_non_html_available():\n\u001b[1;32m     89\u001b[0m     \u001b[39mif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m__is_headers_available_for_non_html():\n\u001b[0;32m---> 90\u001b[0m         elements \u001b[39m=\u001b[39m partition(\n\u001b[1;32m     91\u001b[0m             url\u001b[39m=\u001b[39;49murl, headers\u001b[39m=\u001b[39;49m\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mheaders, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49m\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49munstructured_kwargs\n\u001b[1;32m     92\u001b[0m         )\n\u001b[1;32m     93\u001b[0m     \u001b[39melse\u001b[39;00m:\n\u001b[1;32m     94\u001b[0m         elements \u001b[39m=\u001b[39m partition(url\u001b[39m=\u001b[39murl, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39m\u001b[39mself\u001b[39m\u001b[39m.\u001b[39munstructured_kwargs)\n",
       "File \u001b[0;32m~/development/public/portfolio-analysis-app/.venv/lib/python3.10/site-packages/unstructured/partition/auto.py:96\u001b[0m, in \u001b[0;36mpartition\u001b[0;34m(filename, content_type, file, file_filename, url, include_page_breaks, strategy, encoding, paragraph_grouper, headers, ssl_verify, ocr_languages, pdf_infer_table_structure, xml_keep_tags)\u001b[0m\n\u001b[1;32m     93\u001b[0m exactly_one(file\u001b[39m=\u001b[39mfile, filename\u001b[39m=\u001b[39mfilename, url\u001b[39m=\u001b[39murl)\n\u001b[1;32m     95\u001b[0m \u001b[39mif\u001b[39;00m url \u001b[39mis\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n\u001b[0;32m---> 96\u001b[0m     file, filetype \u001b[39m=\u001b[39m file_and_type_from_url(\n\u001b[1;32m     97\u001b[0m         url\u001b[39m=\u001b[39;49murl,\n\u001b[1;32m     98\u001b[0m         content_type\u001b[39m=\u001b[39;49mcontent_type,\n\u001b[1;32m     99\u001b[0m         headers\u001b[39m=\u001b[39;49mheaders,\n\u001b[1;32m    100\u001b[0m         ssl_verify\u001b[39m=\u001b[39;49mssl_verify,\n\u001b[1;32m    101\u001b[0m     )\n\u001b[1;32m    102\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[1;32m    103\u001b[0m     \u001b[39mif\u001b[39;00m headers \u001b[39m!=\u001b[39m {}:\n",
       "File \u001b[0;32m~/development/public/portfolio-analysis-app/.venv/lib/python3.10/site-packages/unstructured/partition/auto.py:227\u001b[0m, in \u001b[0;36mfile_and_type_from_url\u001b[0;34m(url, content_type, headers, ssl_verify)\u001b[0m\n\u001b[1;32m    221\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mfile_and_type_from_url\u001b[39m(\n\u001b[1;32m    222\u001b[0m     url: \u001b[39mstr\u001b[39m,\n\u001b[1;32m    223\u001b[0m     content_type: Optional[\u001b[39mstr\u001b[39m] \u001b[39m=\u001b[39m \u001b[39mNone\u001b[39;00m,\n\u001b[1;32m    224\u001b[0m     headers: Dict[\u001b[39mstr\u001b[39m, \u001b[39mstr\u001b[39m] \u001b[39m=\u001b[39m {},\n\u001b[1;32m    225\u001b[0m     ssl_verify: \u001b[39mbool\u001b[39m \u001b[39m=\u001b[39m \u001b[39mTrue\u001b[39;00m,\n\u001b[1;32m    226\u001b[0m ) \u001b[39m-\u001b[39m\u001b[39m>\u001b[39m Tuple[io\u001b[39m.\u001b[39mBytesIO, Optional[FileType]]:\n\u001b[0;32m--> 227\u001b[0m     response \u001b[39m=\u001b[39m requests\u001b[39m.\u001b[39;49mget(url, headers\u001b[39m=\u001b[39;49mheaders, verify\u001b[39m=\u001b[39;49mssl_verify)\n\u001b[1;32m    228\u001b[0m     file \u001b[39m=\u001b[39m io\u001b[39m.\u001b[39mBytesIO(response\u001b[39m.\u001b[39mcontent)\n\u001b[1;32m    230\u001b[0m     content_type \u001b[39m=\u001b[39m content_type \u001b[39mor\u001b[39;00m response\u001b[39m.\u001b[39mheaders\u001b[39m.\u001b[39mget(\u001b[39m\"\u001b[39m\u001b[39mContent-Type\u001b[39m\u001b[39m\"\u001b[39m)\n",
@@ -176,10 +183,14 @@
     }
    ],
    "source": [
+    "from langchain.document_loaders import UnstructuredURLLoader\n",
+    "\n",
     "url = \"https://www.nasdaq.com/articles/apple-denies-surveillance-claims-made-by-russias-fsb\"\n",
     "\n",
     "loader = UnstructuredURLLoader(urls=[url], continue_on_failure=False)\n",
-    "data = loader.load()\n"
+    "data = loader.load()\n",
+    "\n",
+    "print(f\"found data: {data}\")"
    ]
   }
  ],
