--- a/notebooks/forecast.ipynb
+++ b/notebooks/forecast.ipynb
@@ -1,153 +1,25 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "import os, sys\n",
-    "# enable absolute paths transversal (from notebooks folder to src folder)\n",
-    "parent_dir = os.path.abspath('..')\n",
-    "if parent_dir not in sys.path:\n",
-    "    sys.path.append(parent_dir)\n",
-    "    \n",
-    "from datetime import datetime, timedelta\n",
-    "import streamlit as st\n",
-    "from pypfopt import expected_returns, EfficientFrontier\n",
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "import plotly.graph_objects as go\n",
+    "Prophet does allow for the inclusion of additional regressors when making forecasts, but note that Prophet's additional regressors are assumed to have a linear effect on the outcome variable. This means you will not be able to model potential non-linear effects of your regressors using Prophet out-of-the-box.\n",
     "\n",
-    "import src.utils as utils\n",
-    "import src.macro.calculate as calculate\n",
-    "import src.macro.plot as plot\n",
+    "from prophet import Prophet\n",
     "\n",
-    "tickers = ['AAPL','AMZN','NVDA','MMC','GOOG','MSFT','BTC-USD','ETH-USD','XOM','BAC','V','GOLD','^GSPC']\n",
-    "start_date = '2014-01-01'\n",
-    "end_date = datetime.now() - timedelta(1)\n",
+    "# Shift the predictor to create a lagged variable\n",
+    "df['US Money Supply Lag1'] = df['US Money Supply'].shift(1)\n",
     "\n",
-    "# just grabbing the 'Adj Close' column\n",
-    "stock_data = utils.get_stock_data(tickers, start_date, end_date)\n",
+    "# Initialize and fit the model\n",
+    "m = Prophet()\n",
+    "m.add_regressor('US Money Supply Lag1')\n",
+    "m.fit(df)\n",
     "\n",
-    "sp500_data = stock_data['^GSPC']\n",
-    "stock_data = stock_data.drop(['^GSPC'], axis=1)\n",
-    "\n",
-    "stock_data.tail()\n",
-    "\n",
-    "\"\"\"similar to portfolio/display.py, set the portfolio weights and calculate the performance\n",
-    "\"\"\"\n",
-    "risk_free_rate = 0.04\n",
-    "mu = expected_returns.mean_historical_return(stock_data)\n",
-    "S = utils.calculate_covariance_matrix(stock_data)\n",
-    "\n",
-    "# Calculating the cumulative monthly returns of a portfolio of stocks with given weights:\n",
-    "min_risk, max_risk = utils.calculate_risk_extents(mu, S, risk_free_rate)\n",
-    "risk = (max_risk + min_risk) / 2\n",
-    "\n",
-    "ef = EfficientFrontier(mu, S)\n",
-    "ef.efficient_risk(risk)\n",
-    "weights = ef.clean_weights()\n",
-    "weights = pd.Series(weights).reindex(stock_data.columns)\n",
-    "ef_returns, ef_volatility, ef_sharpe = ef.portfolio_performance(risk_free_rate)\n",
-    "print(f'ef weights:\\n{weights}')\n",
-    "print(f'ef performance: {ef_returns, ef_volatility, ef_sharpe}')\n",
-    "\n",
-    "# First, calculate the daily returns for each stock\n",
-    "daily_returns = stock_data.pct_change()\n",
-    "print(f'daily_returns tail:\\n{daily_returns.tail()}')\n",
-    "\n",
-    "# Calculate the weighted returns\n",
-    "weighted_returns = daily_returns.multiply(weights, axis=1)\n",
-    "\n",
-    "# Then, calculate the portfolio return by summing across the rows (i.e., the weighted returns for each day)\n",
-    "portfolio_daily_returns = weighted_returns.sum(axis=1)\n",
-    "print(f'portfolio_returns tail:\\n{portfolio_returns.tail()}')\n",
-    "\n",
-    "# Finally, calculate the cumulative monthly returns\n",
-    "portfolio_cumulative_daily_returns = (1 + portfolio_daily_returns).cumprod() - 1\n",
-    "print(f'portfolio_returns tail:\\n{portfolio_cumulative_daily_returns.tail()}')\n",
-    "\n",
-    "# Resample the portfolio returns into monthly returns\n",
-    "portfolio_returns_monthly = portfolio_daily_returns.resample('M').apply(lambda x: (1 + x).prod() - 1)\n",
-    "\n",
-    "# Finally, calculate the cumulative monthly returns\n",
-    "portfolio_cumulative_monthly_returns = (1 + portfolio_returns_monthly).cumprod() - 1\n",
-    "print(f'portfolio_returns tail:\\n{portfolio_cumulative_monthly_returns.tail()}')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "fig = go.Figure()\n",
-    "fig.add_trace(go.Scatter(\n",
-    "    x=portfolio_daily_returns.index,\n",
-    "    y=portfolio_daily_returns,\n",
-    "    mode='lines',\n",
-    "    name='Weighted Portfolio Daily Returns'\n",
-    "))\n",
-    "\n",
-    "fig.update_yaxes(title_text='Returns (%)', tickformat=\".1%\")\n",
-    "fig.update_layout(title='Weighted Portfolio Daily Returns')\n",
-    "fig.show()\n",
-    "\n",
-    "fig = go.Figure()\n",
-    "fig.add_trace(go.Scatter(\n",
-    "    x=portfolio_cumulative_daily_returns.index,\n",
-    "    y=portfolio_cumulative_daily_returns,\n",
-    "    mode='lines',\n",
-    "    name='Weighted Portfolio'\n",
-    "))\n",
-    "\n",
-    "fig.update_yaxes(title_text='Returns (%)', tickformat=\".1%\")\n",
-    "fig.update_layout(title='Weighted Portfolio Cumulative Daily Returns')\n",
-    "fig.show()\n",
-    "\n",
-    "fig = go.Figure()\n",
-    "fig.add_trace(go.Scatter(\n",
-    "    x=portfolio_returns_monthly.index,\n",
-    "    y=portfolio_returns_monthly,\n",
-    "    mode='lines',\n",
-    "    name='Weighted Portfolio Monthly Returns'\n",
-    "))\n",
-    "\n",
-    "fig.update_yaxes(title_text='Returns (%)', tickformat=\".1%\")\n",
-    "fig.update_layout(title='Weighted Portfolio Monthly Returns')\n",
-    "fig.show()\n",
-    "\n",
-    "\n",
-    "fig = go.Figure()\n",
-    "fig.add_trace(go.Scatter(\n",
-    "    x=portfolio_cumulative_monthly_returns.index,\n",
-    "    y=portfolio_cumulative_monthly_returns,\n",
-    "    mode='lines',\n",
-    "    name='Weighted Portfolio'\n",
-    "))\n",
-    "\n",
-    "fig.update_yaxes(title_text='Returns (%)', tickformat=\".1%\")\n",
-    "fig.update_layout(title='Weighted Portfolio Cumulative Monthly Returns')\n",
-    "fig.show()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# rename first column to 'Returns'\n",
-    "\n",
-    "print(f'portfolio_daily_returns head:\\n{portfolio_daily_returns.head()}')\n",
-    "print(f'portfolio_cumulative_daily_returns head:\\n{portfolio_cumulative_daily_returns.head()}')\n",
-    "print(f'portfolio_returns_monthly head:\\n{portfolio_returns_monthly.head()}')\n",
-    "print(f'portfolio_cumulative_monthly_returns head:\\n{portfolio_cumulative_monthly_returns.head()}')\n",
-    "\n",
-    "\n",
-    "\n"
+    "# Make future dataframe and forecast\n",
+    "future = m.make_future_dataframe(periods=365)\n",
+    "forecast = m.predict(future)"
    ]
   },
   {
