updated libs, apis and corresponding fixes

--- a/notebooks/news.ipynb
+++ b/notebooks/news.ipynb
@@ -6,34 +6,34 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from langchain.chat_models import ChatOpenAI\n",
+    "from langchain_community.chat_models import ChatOpenAI\n",
     "from langchain.utilities import GoogleSerperAPIWrapper\n",
     "from langchain.document_loaders import UnstructuredURLLoader\n",
     "from langchain.schema import Document\n",
     "from langchain.chains.summarize import load_summarize_chain\n",
     "\n",
     "import yfinance as yf\n",
-    "import os, sys\n",
+    "import os\n",
     "    \n",
     "from dotenv import load_dotenv\n",
+    "import logging\n",
+    "\n",
+    "logger = logging.getLogger(__name__)\n",
+    "logging.basicConfig(level=logging.INFO)\n",
+    "\n",
     "load_dotenv()\n",
-    "\n",
-    "print(os.environ.get('SERPER_API_KEY'))\n",
-    "print(os.environ.get('OPENAI_API_KEY'))\n",
-    "\n",
-    "GPT_3_5_TOKEN_LIMIT = 4096\n",
     "\n",
     "def get_news_for_ticker(ticker, n_search_restuls=3):\n",
     "    news_results = []\n",
     "    try:\n",
-    "        print(f\"Getting news for {ticker}\")\n",
+    "        logger.info(f\"Getting news for {ticker}\")\n",
     "        company = yf.Ticker(ticker).info['longName']\n",
     "        \n",
     "        # TODO: try bing search or vanilla google - plus might be free vs Serper?\n",
     "        # Show the top X relevant news articles from the previous week using Google Serper API\n",
     "        search = GoogleSerperAPIWrapper(type=\"news\", tbs=\"qdr:w1\", serper_api_key=os.environ.get('SERPER_API_KEY'))\n",
     "        search_query = f\"financial news about {company} or {ticker}\"\n",
-    "        print(f\"Search query: {search_query}\")\n",
+    "        logger.debug(f\"Search query: {search_query}\")\n",
     "        \n",
     "        # search hangs sometimes... trying sleep\n",
     "        result_dict = search.results(search_query)\n",
@@ -59,14 +59,14 @@
     "                            print(f\"Element {i} is type: {type(element)}\")\n",
     "                            if isinstance(element, Document):\n",
     "                                #print(f\"Element {i} is a Document object\\n{element}\")\n",
-    "                                element.page_content = element.page_content[:GPT_3_5_TOKEN_LIMIT]\n",
+    "                                element.page_content = element.page_content[os.getenv('GPT_TOKEN_LIMIT')]\n",
     "                                #print(f\"Truncated data: {data}\")\n",
     "                                break\n",
     "                            else:\n",
     "                                print(f\"Element {i} is not a Document object\\n{element}\")\n",
     "            \n",
     "                        # Initialize the ChatOpenAI module, load and run the summarize chain\n",
-    "                        llm = ChatOpenAI(temperature=0, model='gpt-3.5-turbo', openai_api_key=os.environ.get('OPENAI_API_KEY'))\n",
+    "                        llm = ChatOpenAI(temperature=0, model=os.getenv('GPT_MODEL', 'gpt-3.5-turbo'), openai_api_key=os.environ.get('OPENAI_API_KEY'))\n",
     "                        chain = load_summarize_chain(llm, chain_type=\"map_reduce\")\n",
     "                        summary = chain.run(data)\n",
     "\n",
@@ -119,7 +119,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.10.12"
   },
   "orig_nbformat": 4
  },
